--- a/public/about.html
+++ b/public/about.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="main.css">
 </head>
 <body>
-<div class = "myDiv">
+<!-- <div class = "myDiv">
 </div>
   <h1 class= "getcars">Car list****</h1>
 <script id="my-template" type="text/x-handlebars-template">
@@ -18,10 +18,10 @@
       <p>{{body}}</p>
     </div>
   </div>
-</script>
+</script> -->
 
   <!-- //in jQuery -->
-  $('#target').html('<div class="profile"><dl><dt>Name:</dt><dd>' + person.name + '</dd><dt>Age:</dt><dd>' + person.age + '</dd><dt>Height:</dt><dd>' + person.height + '</dd></dl></div>');
+  <!-- $('#target').html('<div class="profile"><dl><dt>Name:</dt><dd>' + person.name + '</dd><dt>Age:</dt><dd>' + person.age + '</dd><dt>Height:</dt><dd>' + person.height + '</dd></dl></div>'); -->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" charset="utf-8"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.min.js" charset="utf-8"></script>
