--- a/public/index.html
+++ b/public/index.html
@@ -2,29 +2,41 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>What to wear?</title>
   <link rel="stylesheet" href="styles/main.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" charset="utf-8"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.min.js" charset="utf-8"></script>
+  <script src="../main.js"></script>
 </head>
 <body>
-  <h1>Cars</h1>
-  <!--Cars will be appended here  -->
-  <ul class = "cars"></ul>
-{{#cars}}
+<h1>What to wear?</h1>
 
-<p>Car List below</p>
-  <ul id="cars-list"></ul>
 
-<p>Car List above</p>
+  <!-- Handlebars for weather data -->
+  <h2>Temp</h2>
+  <div id="tempOut"></div>
+  <h3>Temp</h3>
+   <script id="profile-template" type="text/x-handlebars-template">
+     <div>{{temp}}
+     <!-- <div>My email is: {{email}}</div> -->
+     <!-- <img src="{{avatar_url}}"/> -->
+     </div>
+   </script>
+ <!-- end Handlebars weather data -->
 
-  <!-- Your Handlebars script -->
-  <script id="car-template" type="text/x-handlebars-template">
-{{#cars}}
-    <li>{{this.name}} - {{this.bhp}} - {{this.id}} {{this.--v}}</li>
-    {{/#cars}}
-  </script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" charset="utf-8"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.min.js" charset="utf-8"></script>
-<script src="../main.js"></script>
+
+ <!-- Handlebars for names and emails-->
+<script type="text/x-handlebars-template" id="wusers-template">
+    <div class="itemTemplateWrapper">
+        <div><span>name: </span><span>{{name}}</span><span>, email: </span><span>{{email}}</span></div>
+    </div>
+</script>
+
+<h1>Weatherapp users</h1>
+<p>The temperature today</p>
+<ul id="wusers"></ul>
+<p>Warm</p>
+<!-- end Handlebars for names and emails-->
 </body>
 </html>
