--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
   <h2>Temp</h2>
   <div id="tempOut"></div>
   <h3>Temp</h3>
-   <script id="profile-template" type="text/x-handlebars-template">
-     <div>{{temp}}
+   <script id="weather-template" type="text/x-handlebars-template">
+     <div>{{T}}
      <!-- <div>My email is: {{email}}</div> -->
      <!-- <img src="{{avatar_url}}"/> -->
      </div>
