--- a/public/index.html
+++ b/public/index.html
@@ -110,43 +110,7 @@
       </form>
 
 
-
-
-
-
-
-      <!-- <script>
-      var queryString = $('#newwuser').serialize();
-      console.log(newwuser);
-      </script> -->
-
-
-
-
-
-    <!-- <script src="js/utilities.js"></script> -->
-    <!-- <script src="js/disable-submit.js"></script> -->
-
-  <!-- First name: <input type="text" fname="fname" size="30" maxlength="10"><br>
-  Email: <input type="text" name="email" size="50" maxlength="20"><br><br>
-  <input type="button" onclick="myFunction()" value="Submit">
-</form>
-
-
-
-<input type="text" name="name" id="uniqueID" value="value" />
-<script>
-function myFunction() {
-    document.getElementById("frm1").submit();
-}
-
-var name = document.getElementById("fname").value;
-console.log(fname);
-console.log(email);
-var name = document.getElementById("email").value;
-var nameValue = document.getElementById("uniqueID").value
-
- -->
-
+<div id = "imagePlaceHolder"> </div>
+<!-- <img src="./images/6.gif"> -->
 </body>
 </html>
